fix the course card aligning problem and capitalize the course name in comment pages

--- a/src/component/courseDescription/Description.css
+++ b/src/component/courseDescription/Description.css
@@ -26,6 +26,7 @@
     font-size: 25px;
     margin-bottom: 1px;
     text-align: left;
+    text-transform: capitalize;
 }
 
 .courseName {
